finished up stylings and began content creation

--- a/index.html
+++ b/index.html
@@ -9,121 +9,92 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-	<style>
-		body{
-			font: 20px sans-serif;
-			line-height: 1.2;
-		}
-		p{
-			font: 16px;
-		}
-		.bg-1{
-			background: #26a69a;
-			color: #ffffff;
-			padding-top: 70px;
-			padding-bottom: 70px;
-			padding-right: 10px;
-			padding-left: 10px;
-		}
-		.bg-2{
-			background: #474e5d;
-			color: #ffffff;
-			padding-top: 70px;
-			padding-bottom: 70px;
-			padding-right: 10px;
-			padding-left: 10px;
-		}
-		.bg-4{
-			background: #eceff1;
-			padding-top: 70px;
-			padding-bottom: 70px;
-			padding-right: 10px;
-			padding-left: 10px;
-		}
-		.navbar{
-			padding-top: 15px;
-			padding-bottom: 15px;
-			border: 0;
-			border-radius: 0;
-			margin-bottom: 0;
-			font-size: 12px;
-			letter-spacing: 5px;
-		}
-	</style>
+	s<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">s
+	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
+
 <body>
 
 	<!--nav bar-->
-	<nav class="navbar navbar-default">
+	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="#">PFI</a>
+				<a class="navbar-brand">PFI</a>
 			</div>
 			<div class="collapse navbar-collapse">
-			<ul class="nav navbar-nav navbar-right">
-				<li><a href="#">ONE</a></li>
-				<li><a href="#">TWO</a></li>
-				<li><a href="#">THREE</a></li>
-			</ul>
+				<div class="nav navbar-nav navbar-right">
+					<li><a href="#home">HOME</a></li>
+					<li><a href="#info">GENERAL INFO</a></li>
+					<li><a href="#faq">FAQ</a></li>
+					<li><a href="#curriculum">CURRICULUM</a></li>
+					<li><a href="#about">ABOUT</a></li>
+					<li><a href="#contact">CONTACT</a></li>
+				</div>
+			</div>
 		</div>
-		</div>
-		
 	</nav>
 
-</nav>
-
-<!-- first one -->
-<div class="container-fluid bg-1 text-center">
-	<h1>Pittsburgh Forensics Institute</h1>
-	<img src="assets/images/gavel.gif" class="img-responsive" width="350px" style="padding-top: 50px; padding-bottom: 50px; display: inline">
-	<p>The Pittsburgh Forensics Institute is a low-cost, high-quality summer camp for the Greater Pittsburgh Forensics Community. In a span of two weeks, participants will be able to explore a deep and thorough curriculum for their events modeled after some of the premier camps in the country, with guidance from the most successful members of the North Allegheny Forensics Team.</p>
-</div>
-
-
-<!--second one -->
-<div class="container-fluid text-center bg-2">
-	<div class="row">
-		<div class="col-sm-4">
-			<h3><b>Who is this for?</b></h3>
-			<p>Middle School and High School students are encouraged to enroll.</p>
-		</div>	
-		<div class="col-sm-4">
-			<h3><b>When</b></h3>
-			<p>August 1st-August 12th, 2016 8:30AM-5:30PM </p>
-		</div>	
-		<div class="col-sm-4">
-			<h3><b>Where</b></h3>
-			<p>Cathedral of Learning, University of Pittburgh</p>
-		</div>	
+	<!-- home/bigimage -->
+	<div class="container-fluid text-center bg-home" id="home">
+		<div class="container-fluid text-center bg-home-text">
+			<h1>Pittsburgh Forensics Institute</h1>
+			<p>A low-cost, high-quality summer camp for the Greater Pittsburgh Forensics Community</p>
+			<button type="button" class="btn btn-warning" href="#">SIGN UP</button>
+		</div>
 	</div>
-</div>	
 
-<!--third one (with google maps)-->
-<div class="container-fluid">
-	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2528.5889830551505!2d-79.95467533543852!3d40.444085012196865!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8834f228a3e31c8b%3A0xcb999890de87ffa6!2sCathedral+of+Learning!5e0!3m2!1sen!2sus!4v1489887708488" width="100%" height="500px" frameborder="0" style="border:0px" allowfullscreen="false"></iframe>
-</div>
-
-<!-- fourth one-->
-<div class="container-fluid bg-4 text-center">
-
-	<div class="row" style="padding-left: 50px; padding-right: 50px">
-		<div class="col-sm-6">
-			<h3><b>Our Mission</b></h3>
-			<p>Our motto is simple: High quality for a low expense. With a mix of large group activities and breakout style small group discussions, the PFI curriculum is focused upon the development of higher level analytical and oratorical skills that are essential for success in forensics, and in life. Whether you’re a novice who’s just joined the team, or an experienced speaker wanting to hone in on skills, PFI’s emphasis on holistic learning lets you build on your strengths and patch up the weak spots, Our dedicated and experienced staff has brought home multiple accolades and have regularly beaten out other top competitors; with their help, you too can learn to clinch that trophy and conquer that elimination round. All it takes is two weeks to make your wildest forensics dreams a reality.</p>
+	<!-- general information -->
+	<div class="container-fluid bg-info bg-info-text" id="info">
+		<h1 class="text-center">GENERAL INFO</h1>
+		<div class="row">
+			<div class="col-sm-4">
+				<h3><b>What?</b></h3>
+				<p>The Pittsburgh Forensics Institute is a low-cost, high-quality summer camp for the Greater Pittsburgh Forensics Community. In a span of two weeks, participants will be able to explore a deep and thorough curriculum for their events modeled after some of the premier camps in the country, with guidance from the most successful members of the North Allegheny Forensics Team.</p>
+			</div>			
+			<div class="col-sm-4">
+				<h3><b>When?</b></h3>
+				<p>The camp will be held from Monday to Friday during the first two weeks of August from 8:30am - 5:30pm</p>
+			</div>
+			<div class="col-sm-4">
+				<h3><b>Where?</b></h3>
+				<p>
+					All lessons will be held at the Cathedral of learning
+					<br>
+					<a href="#map">4200 Fifth Ave, Pittsburgh, PA 15260</a>
+				</p>
+			</div>
 		</div>
-		<div class="col-sm-6">
-			<h3><b>What we do</b></h3>
-			<p>After a successful launch year, PFI is back! The Pittsbrugh Forensics Institute will continue to serve the Greater Pittsburgh Area. Providing quality coaches and experienced students, our one goal is to provide a learning experience in forensics to students who may not have the time to attend camps across the country. If you are interested in speech and debate and want a true learning experience over the summer, PFI is the place for you! </p>
-		</div>
-	</div>		
+	</div>	
 
-</div>
+	<!-- map (with google maps)-->
+	<div class="container-fluid bg-map bg-map-text" id="map">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3036.4013717736466!2d-79.95542768460326!3d40.44425257936183!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8834f228a3e31c8b%3A0xcb999890de87ffa6!2sCathedral+of+Learning!5e0!3m2!1sen!2sus!4v1492187499786" width="100%" height="620" frameborder="0" style="border:0" allowfullscreen></iframe>
+	</div>
 
-<!--fifth one-->
+	<!-- FAQ -->
+	<div class="container-fluid text-center bg-faq bg-faq-text" id="faq">
 
+	</div>
 
-</div>
+	<!-- curriculum -->
+	<div class="container-fluid text-center bg-curriculum bg-curriculum-text" id="curriculum">
+		
+	</div>
+
+	<!-- about us -->
+	<div class="container-fluid text-center bg-about bg-about-text" id="about">
+		
+	</div>
+
+	<!-- contact -->
+	<div class="container-fluid text-center bg-contact bg-contact-text" id="contact">
+		
+	</div>
+
+	<!-- footer -->
+	<footer class="container-fluid bg-footer bg-footer-text">
+		
+	</footer>
 </body>
 </html>
 
