took out old styles, added some new stylings and images

--- a/index.html
+++ b/index.html
@@ -9,26 +9,27 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	s<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">s
+	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="styles.css">
+	<script src="scripts.js"></script>
 </head>
 
 <body>
 
 	<!--nav bar-->
-	<nav class="navbar navbar-default navbar-fixed-top">
+	<nav class="navbar navbar-default navbar-fixed-top" id="myNav">
 		<div class="container">
 			<div class="navbar-header">
 				<a class="navbar-brand">PFI</a>
 			</div>
 			<div class="collapse navbar-collapse">
 				<div class="nav navbar-nav navbar-right">
-					<li><a href="#home">HOME</a></li>
-					<li><a href="#info">GENERAL INFO</a></li>
+					<li><a href="#home">Home</a></li>
+					<li><a href="#info">General Info</a></li>
 					<li><a href="#faq">FAQ</a></li>
-					<li><a href="#curriculum">CURRICULUM</a></li>
-					<li><a href="#about">ABOUT</a></li>
-					<li><a href="#contact">CONTACT</a></li>
+					<li><a href="#curriculum">Curriculum</a></li>
+					<li><a href="#about">About</a></li>
+					<li><a href="#contact">Contact</a></li>
 				</div>
 			</div>
 		</div>
@@ -72,28 +73,32 @@
 	</div>
 
 	<!-- FAQ -->
-	<div class="container-fluid text-center bg-faq bg-faq-text" id="faq">
-
+	<div class="container-fluid bg-faq bg-faq-text" id="faq">
+		<h1 class="text-center">FAQ</h1>
 	</div>
 
 	<!-- curriculum -->
 	<div class="container-fluid text-center bg-curriculum bg-curriculum-text" id="curriculum">
-		
+		<h1 class="text-center">CURRICULUM</h1>
+
 	</div>
 
 	<!-- about us -->
 	<div class="container-fluid text-center bg-about bg-about-text" id="about">
-		
+		<h1 class="text-center">ABOUT US</h1>
+
 	</div>
 
 	<!-- contact -->
 	<div class="container-fluid text-center bg-contact bg-contact-text" id="contact">
-		
+		<h1 class="text-center">CONTACT</h1>
+
 	</div>
 
 	<!-- footer -->
 	<footer class="container-fluid bg-footer bg-footer-text">
-		
+
+		<p>©2017 Pittsburgh Forensics Institute. All rights reserved. Designed and developed by Akshath Jain</p>
 	</footer>
 </body>
 </html>
