--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
 <body>
 
 	<!--nav bar-->
-	<nav class="navbar navbar-default navbar-fixed-top" id="myNav">
+	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header">
-				<a class="navbar-brand">PFI</a>
+				<a class="navbar-brand"><b>PFI</b></a>
 			</div>
 			<div class="collapse navbar-collapse">
 				<div class="nav navbar-nav navbar-right">
-					<li><a href="#home">Home</a></li>
-					<li><a href="#info">General Info</a></li>
-					<li><a href="#faq">FAQ</a></li>
-					<li><a href="#curriculum">Curriculum</a></li>
-					<li><a href="#about">About</a></li>
-					<li><a href="#contact">Contact</a></li>
+					<li><a href="#home"><b>Home</b></a></li>
+					<li><a href="#info"><b>General Info</b></a></li>
+					<li><a href="#faq"><b>FAQ</b></a></li>
+					<li><a href="#curriculum"><b>Curriculum</b></a></li>
+					<li><a href="#about"><b>About</b></a></li>
+					<li><a href="#contact"><b>Contact</b></a></li>
 				</div>
 			</div>
 		</div>
@@ -39,7 +39,7 @@
 	<div class="container-fluid text-center bg-home" id="home">
 		<div class="container-fluid text-center bg-home-text">
 			<h1>Pittsburgh Forensics Institute</h1>
-			<p>A low-cost, high-quality summer camp for the Greater Pittsburgh Forensics Community</p>
+			<p><b>A low-cost, high-quality summer camp for the Greater Pittsburgh Forensics Community</b></p>
 			<button type="button" class="btn btn-warning" href="#">SIGN UP</button>
 		</div>
 	</div>
