--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Pittsburgh Forensics Institute</title>
+	<link rel="shortcut icon" type="image/png" href="assets/images/gavel.png">
 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -39,7 +40,7 @@
 	<div class="container-fluid text-center bg-home" id="home">
 		<div class="container-fluid text-center bg-home-text">
 			<h1>Pittsburgh Forensics Institute</h1>
-			<p><b>A low-cost, high-quality summer camp for the Greater Pittsburgh Forensics Community</b></p>
+			<p><b>A low-cost, high-quality summer camp for the Greater Pittsburgh Speech &amp; Debate Community</b></p>
 			<button type="button" class="btn btn-warning" href="#">SIGN UP</button>
 		</div>
 	</div>
@@ -49,15 +50,15 @@
 		<h1 class="text-center">GENERAL INFO</h1>
 		<div class="row">
 			<div class="col-sm-4">
-				<h3><b>What?</b></h3>
+				<h3><span class="glyphicon glyphicon-paperclip" style="color: #F0AD4E"></span>&nbsp;&nbsp;&nbsp;<b>What?</b></h3>
 				<p>The Pittsburgh Forensics Institute is a low-cost, high-quality summer camp for the Greater Pittsburgh Forensics Community. In a span of two weeks, participants will be able to explore a deep and thorough curriculum for their events modeled after some of the premier camps in the country, with guidance from the most successful members of the North Allegheny Forensics Team.</p>
 			</div>			
 			<div class="col-sm-4">
-				<h3><b>When?</b></h3>
+				<h3><span class="glyphicon glyphicon-calendar" style="color: #F0AD4E"></span>&nbsp;&nbsp;&nbsp;<b>When?</b></h3>
 				<p>The camp will be held from Monday to Friday during the first two weeks of August from 8:30am - 5:30pm</p>
 			</div>
 			<div class="col-sm-4">
-				<h3><b>Where?</b></h3>
+				<h3><span class="glyphicon glyphicon-map-marker" style="color: #F0AD4E"></span>&nbsp;&nbsp;&nbsp;<b>Where?</b></h3>
 				<p>
 					All lessons will be held at the Cathedral of learning
 					<br>
@@ -69,30 +70,187 @@
 
 	<!-- map (with google maps)-->
 	<div class="container-fluid bg-map bg-map-text" id="map">
+		
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3036.4013717736466!2d-79.95542768460326!3d40.44425257936183!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8834f228a3e31c8b%3A0xcb999890de87ffa6!2sCathedral+of+Learning!5e0!3m2!1sen!2sus!4v1492187499786" width="100%" height="620" frameborder="0" style="border:0" allowfullscreen></iframe>
 	</div>
 
 	<!-- FAQ -->
 	<div class="container-fluid bg-faq bg-faq-text" id="faq">
 		<h1 class="text-center">FAQ</h1>
+
+		<div class="row">
+			<div class="col-sm-4">
+				<h3><b>How much does this program cost?</b></h3>
+				<p>The cost for 2017 is $450.00</p>
+			</div>
+			<div class="col-sm-4">
+				<h3><b>How do I pay?</b></h3>
+				<p>Payment information will be sent to the email you registered with by mid-June.</p>
+			</div>
+			<div class="col-sm-4">
+				<h3><b>When is my payment due by?</b></h3>
+				<p>All payments are due by --/--/2017 <br> There will be a late fee for any payments after this.</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-sm-4">
+				<h3><b>What do I do for lunch?</b></h3>
+				<p>When we send you the payment form, you will be given the option to purchase a meal plan for the Pitt cafeteria. You are also welcome to bring your own lunch if you desire. There are also many restaurants around the campus that you are welcome to go to.</p>
+			</div>
+			<div class="col-sm-4">
+				<h3><b>Can I attend even if I have to miss a few days?</b></h3>
+				<p>Not a problem! Just let us know when you're going to be absent.</p>
+			</div>
+			<div class="col-sm-4">
+				<h3><b>Who can attend?</b></h3>
+				<p>This program is open to everyone in middle and high school. Anyone who wants to become a better public speaker is welcome!</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-sm-4">
+				<h3><b>Is there going to be a residential program?</b></h3>
+				<p>We do not have any plans to sponsor any overnight programs through Pitt.</p>
+			</div>
+			<div class="col-sm-4">
+				<h3><b>What should I bring?</b></h3>
+				<p>We recommend that you bring writing utensils, a notebook, a timer (like a cellphone), and a laptop (if you have one).</p>
+			</div>
+			<div class="col-sm-4">
+				<h3><b>Who are the instructors?</b></h3>
+				<p>The curriculum will be organized and directed by current speech and debators. Alumni and college graduates will also be helping.</p>
+			</div>
+		</div>
 	</div>
 
 	<!-- curriculum -->
-	<div class="container-fluid text-center bg-curriculum bg-curriculum-text" id="curriculum">
+	<div class="container-fluid bg-curriculum bg-curriculum-text" id="curriculum">
 		<h1 class="text-center">CURRICULUM</h1>
-
+		<div class="row">
+			<div class="col-sm-6">
+				<h3><b>Lincoln-Douglas Debate (LD)</b></h3>
+				<p>Lincoln Douglas debate is a one-on-one debate that is focused on philosophy and logic.  The debate topics change every two months and are based on what is morally right or wrong. Lincoln Douglas heightens proficiency in speaking, argumentation, and research. Lincoln-Douglas debaters, with their experience in rebuttal delivery and speech writing, soon become well versed in philosophy and become more fluent and confident speakers.</p>
+			</div>
+			<div class="col-sm-6">
+				<h3><b>Public Forum Debate (PF)​​</b></h3>
+				<p>Public Forum Debate is audience friendly debate. Two pairs (teams) debate monthly controversial topics ripped from newspaper headlines. Rounds begin with a coin toss between the competing teams to determine side and order (Pro-Con or Con-Pro). Public Forum tests skills in argumentation, cross-examination, and refutation.</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-sm-6">
+				<h3><b>Extemporaneous Speaking (Extemp)</b></h3>
+				<p>Extemporaneous Speaking is an event that combines quick-thinking and memorization. Competitors will draw a current events question, and then have 30 minutes to prepare a speech in response. Contestants can use a variety of books, magazines, and articles to craft their speech. After 30 minutes, the competitor will deliver their speech for up to 7 minutes. Extemporaneous topics cover a variety of international and domestic issues. All extemporaneous speakers quickly learn about a variety of international issues and will become more confident speaking about the changing world around them.</p>
+			</div>
+			<div class="col-sm-6">
+				<h3><b>Original Oratory (OO)</b></h3>
+				<p>Orators are expected to research and speak intelligently, with a degree of originality, in an interesting manner, and with some profit to the audience, about a topic of significance. Although many orations deal with a current problem and propose a solution this is not the only acceptable form of oratory. Your oration may simply alert the audience to a threatening danger, strengthen its devotion to an accepted cause, or eulogize a person. An orator is given free choice of subject and judged solely on the effectiveness of development and presentation.</p>
+			</div>
+		</div>
+		<div class="row">			
+			<div class="col-sm-6">
+				<h3><b>Interpretation (Interp)</b></h3>
+				<p>
+					Based on their style (below), interpretation competitors take a piece of literature and cut it to ten minutes. They are then are to perform the piece, making it their own.
+					<ul>
+						<li>Dramatic Interp (DI): ​This is an individual category in which the selections are dramatic in nature. Selections shall be cuttings from published-printed novels, short stories, plays, poetry, or any other printed-published materials. Presentations must be memorized, without props or costumes. The time limit is 10 minutes which includes an introduction.</li>
+						<li>Humorous Interp (HI):​​​ This is an individual category in which the selections are humorous in nature. All other rules are the same as Dramatic Interpretation.</li>
+						<li>Duo Interp (Duo):​ This is a two-person category in which the selection may be either humorous or dramatic in nature. All other rules are the same as Dramatic Interpretation.</li>
+					</ul>
+				</p>
+			</div>
+		</div>
 	</div>
 
 	<!-- about us -->
 	<div class="container-fluid text-center bg-about bg-about-text" id="about">
 		<h1 class="text-center">ABOUT US</h1>
 
+		<div class="row">
+			<div class="col-sm-4">
+				<img class="staff-image" src="assets/images/staff/juliechen.png"/>
+				<h3><b>Julie Chen</b></h3>
+				<p>As a staff member of PFI in its first year, Julie is excited to return to teach in 2016! Julie Chen is a rising senior in high school. She is going into her 5th year of Public Forum debate. Julie has competed in out rounds at the Princeton Classic, GMU Patriot Games, and NCFL (2015). She was the third seed preliminary competitor at the NCFL tournament and top 32 at the International Public Policy Forum. Julie has taught Public Forum at both NAFI and PFI. She's also the Vice President of the NA Speech and Debate team. Julie has attended the Harvard Debate Institute Public Forum program. She has also competed and placed in multiple local tournaments. Julie can't wait to see all of the rising PFers and forensics kids at PFI!</p>
+			</div>
+			<div class="col-sm-4">
+				<img class="staff-image" src="assets/images/staff/stephaniemetzger.png"/>
+				<h3><b>Stephanie Metzger</b></h3>
+				<p>Stephanie Metzger is an alumnus of the NA Forensics Team and is currently a student at the University of Pittsburgh. She was a Public Forum debater for all four years of high school, serving as event leader during her senior year in 2012-2013. During her debate career, Stephanie advanced to elimination rounds at a number of national tournaments, including Harvard, Yale, the Pennsylvania State Tournament, the Catholic Forensic League National Tournament, and the National Speech and Debate Association National Tournament. After serving as President of the team senior year, Stephanie has continued to be active with the team as an assistant coach, and she looks forward to working with students from all over the greater Pittsburgh forensics community at camp!</p>
+			</div>
+			<div class="col-sm-4">
+				<img class="staff-image" src="assets/images/staff/anmolanand.png"/>
+				<h3><b>Anmol Anand</b></h3>
+				<p>Anmol Anand is a rising senior at North Allegheny Senior High School. He has been competing in public forum debate for the last three years, competing in a multitude of both local and national tournaments. He has placed at numerous local tournaments, broken at national tournaments, and was a state semi-finalist this past year. Anmol worked with the students at pfi last year, and is extremely excited to do so again this year.</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-sm-4">
+				<img class="staff-image" src="assets/images/staff/kevinxu.png"/>
+				<h3><b>Kevin Xu</b></h3>
+				<p>Kevin Xu is a rising senior attending North Allegheny Senior who has competed in Public Forum for the past two years. In this time, he has competed at various local tournaments, placing at some, as well as national tournaments like the New York City Invitational, GMU Patriot Games, and the Harvard Invitational. Furthermore, this past year, Kevin qualified for the PHSSL State Tournament and was a state quarterfinalist in radio announcing. Kevin is extremely excited to teach at PFI and help students develop their debate skills.</p>
+			</div>
+			<div class="col-sm-4">
+				<img class="staff-image" src="assets/images/staff/ericricci.png"/>
+				<h3><b>Eric Ricci</b></h3>
+				<p>Hi guys I'm Eric, I've been to numerous local and national tournaments and went to states this past year, can't wait to meet you all!</p>
+			</div>
+			<div class="col-sm-4">
+				<img class="staff-image" src="assets/images/staff/joezhao.png"/>
+				<h3><b>Joe Zhao</b></h3>
+				<p>Joe Zhao has been debating Lincoln Douglas Debate for the last 3 years. He has attended several national tournaments, moving on to higher level rounds at many tournaments including Harvard, Yale, and Wake Forest. On the local circuit, Joe has fared very well, winning Bethel Park his sophomore year. He is well versed in different philosophies and can teach both progressive and traditional LD. He also has experience in Public Forum Debate and Humorous Interpretation. He has been to three camps throughout the course of his debate career. Joe is also familiar with Policy Debate, making it to quarterfinals at the state tournament.</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-sm-4">
+				<img class="staff-image" src="assets/images/staff/yaraelkhatib.png"/>
+				<h3><b>Yara El-Khatib</b></h3>
+				<p>Coming Soon!</p>
+			</div>
+			<div class="col-sm-4">
+				<img class="staff-image" src="assets/images/staff/brendangrzyb.png"/>
+				<h3><b>Brendan Grzyb</b></h3>
+				<p>Brendan is a rising senior who has participated in Extemporaneous Speaking for 3 years. Over the course of his career, he has competed at numerous local, district, and college tournaments, including George Mason Univeristy and Harvard. In addition to Extemp, Brendan also competes in Commentary, reaching the semifinal round in the State Tournament. Brendan is looking forward to another year of teaching at PFI, and meeting fellow forensics students from across the entire Pittsburgh area.</p>
+			</div>
+			<div class="col-sm-4">
+				<img class="staff-image" src="assets/images/staff/masonblackburn.png"/>
+				<h3><b>Mason Blackburn</b></h3>				
+				<p>I have been on the North Allegheny forensics team only in extemp for two years ever since I did NAFI the year before freshmen year. I have broken on several occasions in the last two years and made it to the semifinal round at Bethal Park freshman year. I went to almost every tournament I possibly could through out the year and I attended practice 2-3 times per week and always before tournaments through out the year.</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-sm-2"></div>
+			<div class="col-sm-4">
+				<img class="staff-image" src="assets/images/staff/jessicahood.png"/>
+				<h3><b>Jessica Hood</b></h3>
+				<p>Coming Soon!</p>
+			</div>
+			<div class="col-sm-4">
+				<img class="staff-image" src="assets/images/staff/nanditakannapadi.png"/>
+				<h3><b>Nandita Kannapadi</b></h3>
+				<p>​Nandita Kannapadi is a rising senior who had been part of the speech and debate community for 4 years. She has competed in multiple tornuments in Duo Interpretation and Humorous Interpretation. On the local circuit, she has won several awards from tornuments in North Allegheny, Bethel Park, Knoch, Westallegheny, and even was award 1st place in Mercer tornument. She has had the wonderful opportunity to also attend national tornuments such as National Catholic Forensics League tornument and the Harvard tornument. Nandita believes that public speaking is very important and enjoys being oart of a wonderful speech and debate team.</p>
+			</div>
+			<div class="col-sm-2"></div>
+		</div>
 	</div>
 
 	<!-- contact -->
 	<div class="container-fluid text-center bg-contact bg-contact-text" id="contact">
 		<h1 class="text-center">CONTACT</h1>
-
+		<div class="text-center row">
+			<div class="col-sm-4"></div>
+			<div class="col-sm-4">
+				<h3><b>Have any questions?</b></h3>
+				<p>
+					Feel free to contact us anytime
+					<br>
+					<br>
+					General: <a href="mailto:contact@pghforensics.org">contact@pghforensics.org</a>
+					<br>
+					Sponsor: <a href="mailto:sponsor@pghforensics.org">sponsor@pghforensics.org</a>
+					<br>
+					Press: <a href="mailto:press@pghforensics.org">press@pghforensics.org</a>
+				</p>
+			</div>
+			<div class="col-sm-4"></div>
+		</div>
 	</div>
 
 	<!-- footer -->
