added link to sign up

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<div class="container-fluid text-center bg-home-text">
 			<h1>Pittsburgh Forensics Institute</h1>
 			<p><b>A low-cost, high-quality summer camp for the Greater Pittsburgh Speech &amp; Debate Community</b></p>
-			<button type="button" class="btn btn-warning" href="#">SIGN UP</button>
+			<a class="btn btn-warning" href="https://goo.gl/forms/fGtRRlAaa4dLMaGk2">SIGN UP</a>
 		</div>
 	</div>
 
