--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 			<div class="col-sm-4">
 				<h3><b>Have any questions?</b></h3>
 				<p>
-					Feel free to contact us anytime
+					Feel free to contact us anytime.
 					<br>
 					<br>
 					General: <a href="mailto:contact@pghforensics.org">contact@pghforensics.org</a>
