--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<script src="scripts.js"></script>
+
+	<!-- google analytics info -->
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+		ga('create', 'UA-97434519-1', 'auto');
+		ga('send', 'pageview');
+
+	</script>
 </head>
 
 <body>
@@ -60,7 +72,7 @@
 			<div class="col-sm-4">
 				<h3><span class="glyphicon glyphicon-map-marker" style="color: #F0AD4E"></span>&nbsp;&nbsp;&nbsp;<b>Where?</b></h3>
 				<p>
-					All lessons will be held at the Cathedral of learning
+					All lessons will be held at the Cathedral of Learning, Pittsburgh University
 					<br>
 					<a href="#map">4200 Fifth Ave, Pittsburgh, PA 15260</a>
 				</p>
