--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 		<div class="row">
 			<div class="col-sm-4">
 				<h3><b>How much does this program cost?</b></h3>
-				<p>The cost for 2017 is $450.00</p>
+				<p>The cost for 2017 is $---.00</p>
 			</div>
 			<div class="col-sm-4">
 				<h3><b>How do I pay?</b></h3>
