updated navbar (again)

--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
 	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header">
-				<a class="navbar-brand"><b>PFI</b></a>
+				<a class="navbar-brand">PFI</a>
 			</div>
 			<div class="collapse navbar-collapse">
 				<div class="nav navbar-nav navbar-right">
-					<li><a href="#home"><b>Home</b></a></li>
-					<li><a href="#info"><b>General Info</b></a></li>
-					<li><a href="#faq"><b>FAQ</b></a></li>
-					<li><a href="#curriculum"><b>Curriculum</b></a></li>
-					<li><a href="#about"><b>About</b></a></li>
-					<li><a href="#contact"><b>Contact</b></a></li>
+					<li><a href="#home">Home</a></li>
+					<li><a href="#info">General Info</a></li>
+					<li><a href="#faq">FAQ</a></li>
+					<li><a href="#curriculum">Curriculum</a></li>
+					<li><a href="#about">About</a></li>
+					<li><a href="#contact">Contact</a></li>
 				</div>
 			</div>
 		</div>
