--- a/index.html
+++ b/index.html
@@ -249,9 +249,9 @@
 		<div class="text-center row">
 			<div class="col-sm-4"></div>
 			<div class="col-sm-4">
-				<h3><b>Have any questions?</b></h3>
+				<h3><b>Have any questions, comments, or concerns?</b></h3>
 				<p>
-					Feel free to contact us anytime.
+					Feel free to contact us at anytime.
 					<br>
 					<br>
 					General: <a href="mailto:contact@pghforensics.org">contact@pghforensics.org</a>
@@ -259,6 +259,11 @@
 					Sponsor: <a href="mailto:sponsor@pghforensics.org">sponsor@pghforensics.org</a>
 					<br>
 					Press: <a href="mailto:press@pghforensics.org">press@pghforensics.org</a>
+					<br>
+					<br>
+					<a href="https://www.facebook.com/pghforensics/"><img class="social-media-icons" src="assets/images/facebook.png"></a>&nbsp;&nbsp;&nbsp;
+					<a href="https://twitter.com/pghforensics"><img class="social-media-icons" src="assets/images/twitter.png"></a>&nbsp;&nbsp;&nbsp;
+					<a><img class="social-media-icons" src="assets/images/instagram.png" title="PFI Instagram Coming Soon!"></a>
 				</p>
 			</div>
 			<div class="col-sm-4"></div>
@@ -268,7 +273,7 @@
 	<!-- footer -->
 	<footer class="container-fluid bg-footer bg-footer-text">
 
-		<p>©2017 Pittsburgh Forensics Institute. All rights reserved. Designed and developed by Akshath Jain</p>
+		<p>©2017 Pittsburgh Forensics Institute. All rights reserved. Designed and developed by Akshath Jain.</p>
 	</footer>
 </body>
 </html>
