updated some text

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 	<div class="container-fluid text-center bg-home" id="home">
 		<div class="container-fluid text-center bg-home-text">
 			<h1>Pittsburgh Forensics Institute</h1>
-			<p><b>A low-cost, high-quality summer camp for the Greater Pittsburgh Speech &amp; Debate Community</b></p>
+			<p><b>A high-quality summer camp for the Greater Pittsburgh Speech &amp; Debate Community</b></p>
 			<a class="btn btn-warning" href="https://goo.gl/forms/fGtRRlAaa4dLMaGk2">SIGN UP</a>
 		</div>
 	</div>
@@ -277,4 +277,3 @@
 	</footer>
 </body>
 </html>
-
