added due date and total costs

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 		<div class="row">
 			<div class="col-sm-4">
 				<h3><b>How much does this program cost?</b></h3>
-				<p>The cost for 2017 is $---.00</p>
+				<p>The cost for PFI 2017 is $360.</p>
 			</div>
 			<div class="col-sm-4">
 				<h3><b>How do I pay?</b></h3>
@@ -101,7 +101,7 @@
 			</div>
 			<div class="col-sm-4">
 				<h3><b>When is my payment due by?</b></h3>
-				<p>All payments are due by --/--/2017 <br> There will be a late fee for any payments after this.</p>
+				<p>The final payment due date will be emailed out to you by mid-June. <br> There will be a late fee for any payments after the specified due date.</p>
 			</div>
 		</div>
 		<div class="row">
