--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 			</div>			
 			<div class="col-sm-4">
 				<h3><span class="glyphicon glyphicon-calendar" style="color: #F0AD4E"></span>&nbsp;&nbsp;&nbsp;<b>When?</b></h3>
-				<p>The camp will be held from Monday to Friday during the first two weeks of August from 8:30am - 5:30pm</p>
+				<p>Session will be held Monday to Friday from 8:30am - 5:30pm starting on July 31st  and ending on August 11th.</p>
 			</div>
 			<div class="col-sm-4">
 				<h3><span class="glyphicon glyphicon-map-marker" style="color: #F0AD4E"></span>&nbsp;&nbsp;&nbsp;<b>Where?</b></h3>
