--- a/index.html
+++ b/index.html
@@ -33,9 +33,14 @@
 	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header">
+				<a type="button" class="navbar-toggle navbar-menu" data-toggle="collapse" data-target="#mainNav" id="navbarCollapseButton">
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</a>
 				<a class="navbar-brand">PFI</a>
 			</div>
-			<div class="collapse navbar-collapse">
+			<div class="collapse navbar-collapse" id="mainNav">
 				<div class="nav navbar-nav navbar-right">
 					<li><a href="#home">Home</a></li>
 					<li><a href="#info">General Info</a></li>
