--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 					<br>
 					<a href="https://www.facebook.com/pghforensics/"><img class="social-media-icons" src="assets/images/facebook.png"></a>&nbsp;&nbsp;&nbsp;
 					<a href="https://twitter.com/pghforensics"><img class="social-media-icons" src="assets/images/twitter.png"></a>&nbsp;&nbsp;&nbsp;
-					<a href="https://instagram.com/pghforensics"><img class="social-media-icons" src="assets/images/instagram.png" title="PFI Instagram Coming Soon!"></a>
+					<a href="https://instagram.com/pghforensics"><img class="social-media-icons" src="assets/images/instagram.png"></a>
 				</p>
 			</div>
 			<div class="col-sm-4"></div>
