--- a/index.html
+++ b/index.html
@@ -182,25 +182,25 @@
 		<h1 class="text-center">ABOUT US</h1>
 		<div class="row">
 			<div class="col-sm-3">
-				<img class="staff-image" src="assets/images/staff/2017/akshathjain.JPG">
+				<img class="staff-image" src="assets/images/staff/2017/akshathjain.jpg">
 				<h3><b>Akshath Jain</b></h3>
 				<p>Organizer / Instructor <br> Chief Technical Officer and Head of Community Interactions</p>
 				<p><a href="mailto:akshath@pghforensics.org">akshath@pghforensics.org</a></p>
 			</div>
 			<div class="col-sm-3">
-				<img class="staff-image" src="assets/images/staff/2017/joyfu.JPG">
+				<img class="staff-image" src="assets/images/staff/2017/joyfu.jpg">
 				<h3><b>Joy Fu</b></h3>
 				<p>Organizer / Instructor <br> Head of Publicity and Marketing</p>
 				<p><a href="mailto:joy@pghforensics.org">joy@pghforensics.org</a></p>
 			</div>
 			<div class="col-sm-3">
-				<img class="staff-image" src="assets/images/staff/2017/frankli.JPG">
+				<img class="staff-image" src="assets/images/staff/2017/frankli.jpg">
 				<h3><b>Frank Li</b></h3>
 				<p>Organizer / Instructor <br> Head of Communications and Human Relations</p>
 				<p><a href="mailto:frank@pghforensics.org">frank@pghforensics.org</a></p>
 			</div>
 			<div class="col-sm-3">
-				<img class="staff-image" src="assets/images/staff/2017/abhishekmahajan.JPG">
+				<img class="staff-image" src="assets/images/staff/2017/abhishekmahajan.jpg">
 				<h3><b>Abhishek Mahajan</b></h3>
 				<p>Organizer / Instructor <br> Head of Finances</p>
 				<p><a href="mailto:abhishek@pghforensics.org">abhishek@pghforensics.org</a></p>
