fixed session -> sessions typo

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 			</div>			
 			<div class="col-sm-4">
 				<h3><span class="glyphicon glyphicon-calendar" style="color: #F0AD4E"></span>&nbsp;&nbsp;&nbsp;<b>When?</b></h3>
-				<p>Session will be held Monday to Friday from 8:30am - 5:30pm starting on July 31st  and ending on August 11th.</p>
+				<p>Sessions will be held Monday to Friday from 8:30am - 5:30pm starting on July 31st  and ending on August 11th.</p>
 			</div>
 			<div class="col-sm-4">
 				<h3><span class="glyphicon glyphicon-map-marker" style="color: #F0AD4E"></span>&nbsp;&nbsp;&nbsp;<b>Where?</b></h3>
