--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 		<h1 class="text-center">ABOUT US</h1>
 		<div class="row">
 			<div class="col-sm-3">
-				<img class="staff-image" src="assets/images/staff/2017/akshathjain.JPG">
+				<img class="staff-image clickable" src="assets/images/staff/2017/akshathjain.JPG" onclick="window.location.assign('http://akshathjain.com')">
 				<h3><b>Akshath Jain</b></h3>
 				<p>Organizer / Instructor <br> Chief Technical Officer and Head of Community Interactions</p>
 				<p><a href="mailto:akshath@pghforensics.org">akshath@pghforensics.org</a></p>
