updated some information
updated information and removed stupid description tags from each of us

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 			</div>
 			<div class="col-sm-4">
 				<h3><b>When is my payment due by?</b></h3>
-				<p>The final payment due date will be emailed out to you by mid-June. <br> There will be a late fee for any payments after the specified due date.</p>
+				<p>All checks are due by July 21st. The specifics have already been emailed out. <br> There will be a late fee of $30 for any payments postmarked after the specified due date.</p>
 			</div>
 		</div>
 		<div class="row">
@@ -184,25 +184,25 @@
 			<div class="col-sm-3">
 				<img class="staff-image clickable" src="assets/images/staff/2017/akshathjain.JPG" onclick="window.location.assign('http://akshathjain.com')">
 				<h3><b><a style="color: #333333;" href="http://akshathjain.com">Akshath Jain</a></b></h3>
-				<p>Organizer / Instructor <br> Chief Technical Officer and Head of Community Interactions</p>
+				<p>Organizer / Instructor</p>
 				<p><a href="mailto:akshath@pghforensics.org">akshath@pghforensics.org</a></p>
 			</div>
 			<div class="col-sm-3">
 				<img class="staff-image" src="assets/images/staff/2017/joyfu.jpg">
 				<h3><b>Joy Fu</b></h3>
-				<p>Organizer / Instructor <br> Head of Publicity and Marketing</p>
+				<p>Organizer / Instructor</p>
 				<p><a href="mailto:joy@pghforensics.org">joy@pghforensics.org</a></p>
 			</div>
 			<div class="col-sm-3">
 				<img class="staff-image" src="assets/images/staff/2017/frankli.jpg">
 				<h3><b>Frank Li</b></h3>
-				<p>Organizer / Instructor <br> Head of Communications and Human Relations</p>
+				<p>Organizer / Instructor</p>
 				<p><a href="mailto:frank@pghforensics.org">frank@pghforensics.org</a></p>
 			</div>
 			<div class="col-sm-3">
 				<img class="staff-image" src="assets/images/staff/2017/abhishekmahajan.jpg">
 				<h3><b>Abhishek Mahajan</b></h3>
-				<p>Organizer / Instructor <br> Head of Finances</p>
+				<p>Organizer / Instructor</p>
 				<p><a href="mailto:abhishek@pghforensics.org">abhishek@pghforensics.org</a></p>
 			</div>
 		</div>
