--- a/index.html
+++ b/index.html
@@ -87,8 +87,9 @@
 
 	<!-- map (with google maps)-->
 	<div class="container-fluid bg-map bg-map-text" id="map">
-		
-		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3036.4013717736466!2d-79.95542768460326!3d40.44425257936183!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8834f228a3e31c8b%3A0xcb999890de87ffa6!2sCathedral+of+Learning!5e0!3m2!1sen!2sus!4v1492187499786" width="100%" height="620" frameborder="0" style="border:0" allowfullscreen></iframe>
+		<div onclick="document.getElementById('map-iframe').style.pointerEvents='auto';">
+			<iframe id="map-iframe" style="pointer-events:none" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3036.4013717736466!2d-79.95542768460326!3d40.44425257936183!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8834f228a3e31c8b%3A0xcb999890de87ffa6!2sCathedral+of+Learning!5e0!3m2!1sen!2sus!4v1492187499786" width="100%" height="620" frameborder="0" style="border:0" allowfullscreen></iframe>
+		</div>
 	</div>
 
 	<!-- FAQ -->
