updated info about lunch

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 		<div class="row">
 			<div class="col-sm-4">
 				<h3><b>What do I do for lunch?</b></h3>
-				<p>When we send you the payment form, you will be given the option to purchase a meal plan for the Pitt cafeteria. You are also welcome to bring your own lunch if you desire. There are also many restaurants around the campus that you are welcome to go to.</p>
+				<p>You can either pack a lunch or eat at one of the many restaurants on and around the Pitt Campus. We just ask that you stay in a group of 3 - 4 and stay around the Pitt Campus.</p>
 			</div>
 			<div class="col-sm-4">
 				<h3><b>Can I attend even if I have to miss a few days?</b></h3>
