updated payment faq section

--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@
 			</div>
 			<div class="col-sm-4">
 				<h3><b>How do I pay?</b></h3>
-				<p>Payment information will be sent to the email you registered with by mid-June.</p>
+				<p>Payment information will be emailed to you shortly after signing up.</p>
 			</div>
 			<div class="col-sm-4">
 				<h3><b>When is my payment due by?</b></h3>
-				<p>All checks are due by July 21st. The specifics have already been emailed out. <br> There will be a late fee of $30 for any payments postmarked after the specified due date.</p>
+				<p>All checks are due by July 21st unless otherwise specified (e.g. a recent enrollment). Payment specifics have already been emailed out. <br> There will be a late fee of $30 for any payments postmarked after the specified due date.<br>Please <a href="#contact">contact</a> us with any questions.</p>
 			</div>
 		</div>
 		<div class="row">
