--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 			</div>
 			<div class="col-sm-4">
 				<h3><b>When is my payment due by?</b></h3>
-				<p>All checks are due by July 21st unless otherwise specified (e.g. a recent enrollment). Payment specifics have already been emailed out. <br> There will be a late fee of $30 for any payments postmarked after the specified due date.<br>Please <a href="#contact">contact</a> us with any questions.</p>
+				<p>All checks are due by July 31st (the first day of the program). Payment specifics have already been emailed out.<br>Please <a href="#contact">contact</a> us with any questions.</p>
 			</div>
 		</div>
 		<div class="row">
