--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Pittsburgh Forensics Institute</title>
-	<link rel="shortcut icon" type="image/png" href="assets/images/gavel.png">
+	<link rel="shortcut icon" type="image/png" href="images/gavel.png">
 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,8 +11,8 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="styles.css">
-	<script src="scripts.js"></script>
+	<link rel="stylesheet" type="text/css" href="styles/styles.css">
+	<script src="scripts/scripts.js"></script>
 
 	<!-- google analytics info -->
 	<script>
@@ -183,25 +183,25 @@
 		<h1 class="text-center">ABOUT US</h1>
 		<div class="row">
 			<div class="col-sm-3">
-				<img class="staff-image clickable" src="assets/images/staff/2017/akshathjain.JPG" onclick="window.location.assign('http://akshathjain.com')">
+				<img class="staff-image clickable" src="images/staff/2017/akshathjain.JPG" onclick="window.location.assign('http://akshathjain.com')">
 				<h3><b><a style="color: #333333;" href="http://akshathjain.com">Akshath Jain</a></b></h3>
 				<p>Organizer / Instructor</p>
 				<p><a href="mailto:akshath@pghforensics.org">akshath@pghforensics.org</a></p>
 			</div>
 			<div class="col-sm-3">
-				<img class="staff-image" src="assets/images/staff/2017/joyfu.jpg">
+				<img class="staff-image" src="images/staff/2017/joyfu.jpg">
 				<h3><b>Joy Fu</b></h3>
 				<p>Organizer / Instructor</p>
 				<p><a href="mailto:joy@pghforensics.org">joy@pghforensics.org</a></p>
 			</div>
 			<div class="col-sm-3">
-				<img class="staff-image" src="assets/images/staff/2017/frankli.jpg">
+				<img class="staff-image" src="images/staff/2017/frankli.jpg">
 				<h3><b>Frank Li</b></h3>
 				<p>Organizer / Instructor</p>
 				<p><a href="mailto:frank@pghforensics.org">frank@pghforensics.org</a></p>
 			</div>
 			<div class="col-sm-3">
-				<img class="staff-image" src="assets/images/staff/2017/abhishekmahajan.jpg">
+				<img class="staff-image" src="images/staff/2017/abhishekmahajan.jpg">
 				<h3><b>Abhishek Mahajan</b></h3>
 				<p>Organizer / Instructor</p>
 				<p><a href="mailto:abhishek@pghforensics.org">abhishek@pghforensics.org</a></p>
@@ -227,9 +227,9 @@
 					Press: <a href="mailto:press@pghforensics.org">press@pghforensics.org</a>
 					<br>
 					<br>
-					<a href="https://www.facebook.com/pghforensics/"><img class="social-media-icons" src="assets/images/facebook.png"></a>&nbsp;&nbsp;&nbsp;
-					<a href="https://twitter.com/pghforensics"><img class="social-media-icons" src="assets/images/twitter.png"></a>&nbsp;&nbsp;&nbsp;
-					<a href="https://instagram.com/pghforensics"><img class="social-media-icons" src="assets/images/instagram.png"></a>
+					<a href="https://www.facebook.com/pghforensics/"><img class="social-media-icons" src="images/facebook.png"></a>&nbsp;&nbsp;&nbsp;
+					<a href="https://twitter.com/pghforensics"><img class="social-media-icons" src="images/twitter.png"></a>&nbsp;&nbsp;&nbsp;
+					<a href="https://instagram.com/pghforensics"><img class="social-media-icons" src="images/instagram.png"></a>
 				</p>
 			</div>
 			<div class="col-sm-4"></div>
