--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="styles/styles.css">
+	<link rel="stylesheet" href="styles/styles.css">
 	<script src="scripts/scripts.js"></script>
 
 	<!-- google analytics info -->
@@ -208,6 +208,15 @@
 			</div>
 		</div>
 	</div>
+
+	<!-- instructors -->
+	<!-- <div class="container-fluid bg-staff bg-staff-text">
+		<div class="text-center">
+			<h3 class="text-center"><b>Meet our Instructors!</b></h3>
+			<p>They're a crucial part of our program.</p>
+			<a href="instructors.html" type="button" class="btn btn-warning">View Instructors</a>
+		</div>
+	</div> -->
 
 	<!-- contact -->
 	<div class="container-fluid text-center bg-contact bg-contact-text" id="contact">
