--- a/instructors.html
+++ b/instructors.html
@@ -1,88 +1,51 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Pittsburgh Forensics Institute</title>	
-	<link rel="shortcut icon" type="image/png" href="assets/images/gavel.png">
+	<title>Instructors</title>
+	<link rel="shortcut icon" type="image/png" href="images/gavel.png">
+
+	<!-- initialize resources -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="styles.css">
-	<script src="scripts.js"></script>
+	<link rel="stylesheet" type="text/css" href="styles/styles.css">
+	<script src="scripts/instructorScripts.js"></script>
+
 </head>
 <body>
-	<div class="container-fluid text-center bg-about bg-about-text" id="about">
-		<h1 class="text-center">2016</h1>
 
-		<div class="row">
-			<div class="col-sm-4">
-				<img class="staff-image" src="assets/images/staff/2016/juliechen.png"/>
-				<h3><b>Julie Chen</b></h3>
-				<p>As a staff member of PFI in its first year, Julie is excited to return to teach in 2016! Julie Chen is a rising senior in high school. She is going into her 5th year of Public Forum debate. Julie has competed in out rounds at the Princeton Classic, GMU Patriot Games, and NCFL (2015). She was the third seed preliminary competitor at the NCFL tournament and top 32 at the International Public Policy Forum. Julie has taught Public Forum at both NAFI and PFI. She's also the Vice President of the NA Speech and Debate team. Julie has attended the Harvard Debate Institute Public Forum program. She has also competed and placed in multiple local tournaments. Julie can't wait to see all of the rising PFers and forensics kids at PFI!</p>
+	<!-- navbar -->
+	<nav class="navbar navbar-default navbar-fixed-top navbarStateWhenScrolled">
+		<div class="container">
+			<div class="navbar-header">
+				<a class="navbar-brand" href="index.html#curriculum"><span style="font-size: 15px;" class="glyphicon glyphicon-menu-left"></span>&nbsp;&nbsp;&nbsp;BACK</a>
 			</div>
-			<div class="col-sm-4">
-				<img class="staff-image" src="assets/images/staff/2016/stephaniemetzger.png"/>
-				<h3><b>Stephanie Metzger</b></h3>
-				<p>Stephanie Metzger is an alumnus of the NA Forensics Team and is currently a student at the University of Pittsburgh. She was a Public Forum debater for all four years of high school, serving as event leader during her senior year in 2012-2013. During her debate career, Stephanie advanced to elimination rounds at a number of national tournaments, including Harvard, Yale, the Pennsylvania State Tournament, the Catholic Forensic League National Tournament, and the National Speech and Debate Association National Tournament. After serving as President of the team senior year, Stephanie has continued to be active with the team as an assistant coach, and she looks forward to working with students from all over the greater Pittsburgh forensics community at camp!</p>
-			</div>
-			<div class="col-sm-4">
-				<img class="staff-image" src="assets/images/staff/2016/anmolanand.png"/>
-				<h3><b>Anmol Anand</b></h3>
-				<p>Anmol Anand is a rising senior at North Allegheny Senior High School. He has been competing in public forum debate for the last three years, competing in a multitude of both local and national tournaments. He has placed at numerous local tournaments, broken at national tournaments, and was a state semi-finalist this past year. Anmol worked with the students at pfi last year, and is extremely excited to do so again this year.</p>
+			<div class="collapse navbar-collapse">
+				<div class="nav navbar-nav navbar-right">
+					<li><a>Instructors</a></li>
+				</div>
 			</div>
 		</div>
-		<div class="row">
-			<div class="col-sm-4">
-				<img class="staff-image" src="assets/images/staff/2016/kevinxu.png"/>
-				<h3><b>Kevin Xu</b></h3>
-				<p>Kevin Xu is a rising senior attending North Allegheny Senior who has competed in Public Forum for the past two years. In this time, he has competed at various local tournaments, placing at some, as well as national tournaments like the New York City Invitational, GMU Patriot Games, and the Harvard Invitational. Furthermore, this past year, Kevin qualified for the PHSSL State Tournament and was a state quarterfinalist in radio announcing. Kevin is extremely excited to teach at PFI and help students develop their debate skills.</p>
+	</nav>
+
+	<!--begin template engine-->
+	<div class="container-fluid text-center bg-about bg-about-text">
+		<div id="instructor-container"> 
+			<div class="col-sm-4" id="instructor-template">
+				<img class="staff-image" src="" alt="instructor_image"/>
+				<h3>Instructor Name</h3>
+				<p>Instructor Description</p>
 			</div>
-			<div class="col-sm-4">
-				<img class="staff-image" src="assets/images/staff/2016/ericricci.png"/>
-				<h3><b>Eric Ricci</b></h3>
-				<p>Hi guys I'm Eric, I've been to numerous local and national tournaments and went to states this past year, can't wait to meet you all!</p>
-			</div>
-			<div class="col-sm-4">
-				<img class="staff-image" src="assets/images/staff/2016/joezhao.png"/>
-				<h3><b>Joe Zhao</b></h3>
-				<p>Joe Zhao has been debating Lincoln Douglas Debate for the last 3 years. He has attended several national tournaments, moving on to higher level rounds at many tournaments including Harvard, Yale, and Wake Forest. On the local circuit, Joe has fared very well, winning Bethel Park his sophomore year. He is well versed in different philosophies and can teach both progressive and traditional LD. He also has experience in Public Forum Debate and Humorous Interpretation. He has been to three camps throughout the course of his debate career. Joe is also familiar with Policy Debate, making it to quarterfinals at the state tournament.</p>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-sm-4">
-				<img class="staff-image" src="assets/images/staff/2016/yaraelkhatib.png"/>
-				<h3><b>Yara El-Khatib</b></h3>
-				<p>Coming Soon!</p>
-			</div>
-			<div class="col-sm-4">
-				<img class="staff-image" src="assets/images/staff/2016/brendangrzyb.png"/>
-				<h3><b>Brendan Grzyb</b></h3>
-				<p>Brendan is a rising senior who has participated in Extemporaneous Speaking for 3 years. Over the course of his career, he has competed at numerous local, district, and college tournaments, including George Mason Univeristy and Harvard. In addition to Extemp, Brendan also competes in Commentary, reaching the semifinal round in the State Tournament. Brendan is looking forward to another year of teaching at PFI, and meeting fellow forensics students from across the entire Pittsburgh area.</p>
-			</div>
-			<div class="col-sm-4">
-				<img class="staff-image" src="assets/images/staff/2016/masonblackburn.png"/>
-				<h3><b>Mason Blackburn</b></h3>				
-				<p>I have been on the North Allegheny forensics team only in extemp for two years ever since I did NAFI the year before freshmen year. I have broken on several occasions in the last two years and made it to the semifinal round at Bethal Park freshman year. I went to almost every tournament I possibly could through out the year and I attended practice 2-3 times per week and always before tournaments through out the year.</p>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-sm-2"></div>
-			<div class="col-sm-4">
-				<img class="staff-image" src="assets/images/staff/2016/jessicahood.png"/>
-				<h3><b>Jessica Hood</b></h3>
-				<p>Coming Soon!</p>
-			</div>
-			<div class="col-sm-4">
-				<img class="staff-image" src="assets/images/staff/2016/nanditakannapadi.png"/>
-				<h3><b>Nandita Kannapadi</b></h3>
-				<p>​Nandita Kannapadi is a rising senior who had been part of the speech and debate community for 4 years. She has competed in multiple tornuments in Duo Interpretation and Humorous Interpretation. On the local circuit, she has won several awards from tornuments in North Allegheny, Bethel Park, Knoch, Westallegheny, and even was award 1st place in Mercer tornument. She has had the wonderful opportunity to also attend national tornuments such as National Catholic Forensics League tornument and the Harvard tornument. Nandita believes that public speaking is very important and enjoys being oart of a wonderful speech and debate team.</p>
-			</div>
-			<div class="col-sm-2"></div>
 		</div>
 	</div>
 
+	<footer class="container-fluid bg-footer bg-footer-text">
+		<p>
+			©2017 Pittsburgh Forensics Institute. All rights reserved. Designed and developed by Akshath Jain.
+		</p>
+	</footer>
+
 </body>
-</html>
